# kangaroo_market

./: .env.example  .gitignore  AGENTS.md  AI_Constraints.md  Deployment.md  README.md  config.yaml  conftest.py  prompts.md  pyproject.toml
Documentation/: Kangaroo_Research_Assistant_Design.md
src/kangaroo/: config.py  notify.py  pipeline.py  scheduler.py
src/kangaroo/dashboard/: app.py
src/kangaroo/dashboard/templates/: base.html  ladders.html  performance.html  today.html
src/kangaroo/db/: init.py  repository.py  schema.sql
src/kangaroo/filters/: _calendar.py  _indicators.py  blocklist.py  earnings.py  quality.py  sector.py  setup.py  universe.py
src/kangaroo/jobs/: nightly.py  pipeline_run.py
src/kangaroo/sources/: _sector_map.py  market_data.py  news.py
tests/: test_config.py  test_dashboard.py  test_db_init.py  test_market_data.py  test_news.py  test_notify.py  test_pipeline.py  test_scheduler.py
tests/test_filters/: test_blocklist.py  test_earnings.py  test_indicators.py  test_quality.py  test_sector.py  test_setup.py  test_universe.py
tests/test_jobs/: test_nightly.py
