[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kangaroo"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi~=0.111",
    "uvicorn[standard]~=0.30",
    "jinja2~=3.1",
    "aiohttp~=3.9",
    "aiosqlite~=0.20",
    "pydantic~=2.7",
    "pydantic-settings~=2.3",
    "python-dotenv~=1.0",
    "apscheduler~=3.10",
    "pyyaml~=6.0",
    "yfinance>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.2",
    "pytest-asyncio~=0.23",
    "ruff~=0.4",
    "mypy~=1.10",
    "types-PyYAML",
    "httpx~=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
strict = true
explicit_package_bases = true
mypy_path = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
